[gd_scene load_steps=7 format=3 uid="uid://x36fh0cvksgi"]

[ext_resource type="Texture2D" uid="uid://cjjpw2cfeijia" path="res://Characters/Enemies/Zombie.png" id="1_3d7q1"]
[ext_resource type="Script" path="res://Characters/Enemies/Zombie.gd" id="1_106ue"]
[ext_resource type="AudioStream" uid="uid://dh4rybl8r3lqs" path="res://Audio/ZombieKilled.mp3" id="3_56dgj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h28fj"]
size = Vector2(13, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmggr"]
size = Vector2(9, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_sxm34"]
radius = 166.027

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 243
script = ExtResource("1_106ue")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_3d7q1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 6)
shape = SubResource("RectangleShape2D_h28fj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -9)
shape = SubResource("RectangleShape2D_gmggr")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sxm34")

[node name="Label" type="Label" parent="."]
offset_left = -8.0
offset_top = -24.0
offset_right = 46.0
offset_bottom = 2.0
scale = Vector2(0.3, 0.3)
text = "100 HP"

[node name="ZombieKilled" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_56dgj")
pitch_scale = 1.5
max_polyphony = 10

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
